--- a/App/src/styles/CommonColors.scss
+++ b/App/src/styles/CommonColors.scss
@@ -1,3 +1,5 @@
 $intensive-green: #036613;
 $less-intensive-green: #c6e4cb;
-$clear-white: #FFFFFF;
+$clear-white: #ffffff;
+$black-text: #141414;
+$gray-text: #909090;
