Building front and update ci cd

--- a/App/src/styles/CommonColors.scss
+++ b/App/src/styles/CommonColors.scss
@@ -1,5 +1,7 @@
 $intensive-green: #036613;
 $less-intensive-green: #c6e4cb;
+$intensive-blue: #003399;
+$less-intensive-blue: #cedeff;
 $clear-white: #ffffff;
 $black-text: #141414;
 $gray-text: #909090;
