--- a/App/src/index.css
+++ b/App/src/index.css
@@ -5,9 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  font-family: "Roboto";
+  font-style: normal;
+}
+#root {
+  height: 100%;
+  width: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: "Roboto" source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
