--- a/App/src/styles/CommonFonts.scss
+++ b/App/src/styles/CommonFonts.scss
@@ -1,14 +1,23 @@
 @import "./CommonColors.scss";
 @import "@fontsource/roboto";
+
+@mixin fontSizeSeventy {
+    font-weight: 800;
+    font-size: 70px;
+}
+@mixin fontThirtyTwo {
+    font-weight: 800;
+    font-size: 32px;
+}
 @mixin fontSizeTwenty {
-    font-family: "Roboto";
-    font-style: normal;
     font-weight: 700;
     font-size: 20px;
 }
+@mixin fontSizeEighteen {
+    font-weight: 700;
+    text-align: center;
+}
 @mixin fontSizeSixteen {
-    font-family: "Roboto";
-    font-style: normal;
     font-weight: 700;
     font-size: 16px;
 }
