--- a/App/src/styles/CommonColors.scss
+++ b/App/src/styles/CommonColors.scss
@@ -2,6 +2,8 @@ $intensive-green: #036613;
 $less-intensive-green: #c6e4cb;
 $intensive-blue: #003399;
 $less-intensive-blue: #cedeff;
+$intensive-orange: #F1582C;
+$less-intensive-orange: #FFE9BD;
 $clear-white: #ffffff;
 $black-text: #141414;
 $gray-text: #909090;
