--- a/App/src/styles/CommonFonts.scss
+++ b/App/src/styles/CommonFonts.scss
@@ -15,7 +15,7 @@
 }
 @mixin fontSizeEighteen {
     font-weight: 700;
-    text-align: center;
+    font-size: 18px;
 }
 @mixin fontSizeSixteen {
     font-weight: 700;
