--- a/App/src/components/AdministrationLayoutComponents/NavigationItem/NavigationItem.module.scss
+++ b/App/src/components/AdministrationLayoutComponents/NavigationItem/NavigationItem.module.scss
@@ -8,5 +8,5 @@
     cursor: pointer;
 }
 .navigationItem:hover {
-    filter: drop-shadow(0px 0px 6px #FF3D00);
+    filter: drop-shadow(0px 0px 6px $intensive-orange);
 }
