--- a/App/src/components/common/AdminMenu/AdminMenuLayout/AdminMenuLayout.module.scss
+++ b/App/src/components/common/AdminMenu/AdminMenuLayout/AdminMenuLayout.module.scss
@@ -24,7 +24,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-evenly;
-                    box-shadow: 0px 4px 4px rgba(229, 229, 229, 0.1);
+                    @include greenShadow;
                     border-radius: 8px;
                     height: 48px;
                     width: 48px;
