--- a/App/src/components/common/Buttons/BigButtons/BigButton.module.scss
+++ b/App/src/components/common/Buttons/BigButtons/BigButton.module.scss
@@ -1,7 +1,7 @@
 @import "styles/Commons.scss";
-.buttonStyles {
+@mixin buttonStyles {
     border-radius: 100px;
-    @include fontSizeEighteen;
+    @include fontSizeSixteen;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,4 +9,16 @@
     width: 250px;
     color: $clear-white;
     cursor: pointer;
+}
+.buttonStylesGreen {
+    @include buttonStyles;
+}
+.buttonStylesGreen:hover {
+    box-shadow: 0px 0px 4px $intensive-green;
+}
+.buttonStylesOrange {
+    @include buttonStyles;
+}
+.buttonStylesOrange:hover {
+    box-shadow: 0px 0px 4px $intensive-orange;
 }
