Implemented first create post form + secured api from unauthorized calls

--- a/App/src/styles/CommonColors.scss
+++ b/App/src/styles/CommonColors.scss
@@ -3,7 +3,9 @@ $less-intensive-green: #c6e4cb;
 $intensive-blue: #003399;
 $less-intensive-blue: #cedeff;
 $intensive-orange: #F1582C;
+$intensive-red: #E10000;
 $less-intensive-orange: #FFE9BD;
 $clear-white: #ffffff;
 $black-text: #141414;
 $gray-text: #909090;
+$gray-border: #C4C4C4;
