--- a/App/src/styles/CommonShadows.scss
+++ b/App/src/styles/CommonShadows.scss
@@ -1,6 +1,9 @@
 @mixin greenShadow {
-    box-shadow: 0px 0px 4px $intensive-green;
+  box-shadow: 0px 0px 4px $intensive-green;
 } //rgba(229, 229, 229, 0.1)
 @mixin orangeShadow {
-    box-shadow: 0px 0px 4px $intensive-orange;
+  box-shadow: 0px 0px 4px $intensive-orange;
+}
+@mixin redShadow {
+  box-shadow: 0px 0px 4px $intensive-red;
 }
