More cruds implemented (posts)

--- a/App/src/styles/Commons.scss
+++ b/App/src/styles/Commons.scss
@@ -2,4 +2,4 @@
 @import "./CommonIndents.scss";
 @import "./CommonFonts.scss";
 @import "./CommonShadows.scss";
-
+@import "./Articles/CommonArticlesIndents.scss"
