--- a/App/src/styles/CommonColors.scss
+++ b/App/src/styles/CommonColors.scss
@@ -2,10 +2,11 @@ $intensive-green: #036613;
 $less-intensive-green: #c6e4cb;
 $intensive-blue: #003399;
 $less-intensive-blue: #cedeff;
-$intensive-orange: #F1582C;
-$intensive-red: #E10000;
-$less-intensive-orange: #FFE9BD;
+$intensive-orange: #f1582c;
+$intensive-red: #e10000;
+$less-intensive-orange: #ffe9bd;
 $clear-white: #ffffff;
 $black-text: #141414;
 $gray-text: #909090;
-$gray-border: #C4C4C4;
+$gray-border: #c4c4c4;
+$gray-box-shadow: #f5f5f5;
