--- a/App/src/components/common/ArticleCommonComponents/ArticleContent/ArticleContent.module.scss
+++ b/App/src/components/common/ArticleCommonComponents/ArticleContent/ArticleContent.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   .content {
     width: 100%;
+    flex: 1;
     .item {
       @include fontSizeSixteen;
       color: $black-text;
@@ -15,7 +16,6 @@
       background: $less-intensive-green;
       box-shadow: 2px 2px 8px 3px $gray-box-shadow;
       border-radius: 12px;
-      width: 100%;
       height: 60px;
       padding: 0 12px;
       margin-top: 10px;
@@ -37,3 +37,5 @@
     }
   }
 }
+
+
