Created modal for items upload

--- a/App/src/styles/CommonColors.scss
+++ b/App/src/styles/CommonColors.scss
@@ -6,6 +6,7 @@ $intensive-orange: #f1582c;
 $intensive-red: #e10000;
 $less-intensive-orange: #ffe9bd;
 $clear-white: #ffffff;
+$modal-white-background: rgba(255,255,255, 0.25);
 $black-text: #141414;
 $gray-text: #909090;
 $gray-border: #c4c4c4;
