--- a/App/src/styles/Commons.scss
+++ b/App/src/styles/Commons.scss
@@ -1,5 +1,6 @@
 @import "./CommonColors.scss";
 @import "./CommonIndents.scss";
 @import "./CommonFonts.scss";
+@import "./CommonWrapLongText.scss";
 @import "./CommonShadows.scss";
 @import "./Articles/CommonArticlesIndents.scss"
