Prepared frontend for file catching

--- a/App/src/components/common/FileModal/FileModal.module.scss
+++ b/App/src/components/common/FileModal/FileModal.module.scss
@@ -75,3 +75,9 @@
     margin-bottom: 8px;
   }
 }
+.saveButton {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 16px;
+}
