--- a/App/src/components/common/Buttons/SmallButtons/SmallButton.module.scss
+++ b/App/src/components/common/Buttons/SmallButtons/SmallButton.module.scss
@@ -24,3 +24,15 @@
 .buttonStylesOrange:hover {
     box-shadow: 0px 0px 4px $intensive-orange;
 }
+.buttonStylesBlue {
+    @include buttonStyles;
+}
+.buttonStylesBlue:hover {
+    box-shadow: 0px 0px 4px $intensive-blue;
+}
+.buttonStylesRed {
+    @include buttonStyles;
+}
+.buttonStylesRed:hover {
+    box-shadow: 0px 0px 4px $intensive-red;
+}
