--- a/App/src/components/common/Buttons/BigButtons/BigButton.module.scss
+++ b/App/src/components/common/Buttons/BigButtons/BigButton.module.scss
@@ -1,24 +1,36 @@
-@import "styles/Commons.scss";
+@import 'styles/Commons.scss';
 @mixin buttonStyles {
-    border-radius: 100px;
-    @include fontSizeSixteen;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 60px;
-    width: 250px;
-    color: $clear-white;
-    cursor: pointer;
+  border-radius: 100px;
+  @include fontSizeSixteen;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  width: 250px;
+  color: $clear-white;
+  cursor: pointer;
 }
 .buttonStylesGreen {
-    @include buttonStyles;
+  @include buttonStyles;
 }
 .buttonStylesGreen:hover {
-    box-shadow: 0px 0px 4px $intensive-green;
+  box-shadow: 0px 0px 4px $intensive-green;
 }
 .buttonStylesOrange {
-    @include buttonStyles;
+  @include buttonStyles;
 }
 .buttonStylesOrange:hover {
-    box-shadow: 0px 0px 4px $intensive-orange;
+  box-shadow: 0px 0px 4px $intensive-orange;
+}
+.buttonStylesBlue {
+  @include buttonStyles;
+}
+.buttonStylesBlue:hover {
+  box-shadow: 0px 0px 4px $intensive-blue;
+}
+.buttonStylesRed {
+  @include buttonStyles;
+}
+.buttonStylesRed:hover {
+  box-shadow: 0px 0px 4px $intensive-red;
 }
