Expanding uploading files solution in posts

--- a/App/src/components/ArticlesComponents/Create/CreatePost/CreatePostFiles.module.scss
+++ b/App/src/components/ArticlesComponents/Create/CreatePost/CreatePostFiles.module.scss
@@ -10,4 +10,12 @@
       @include fontSizeSixteen;
     }
   }
+  .noFilesOrImages {
+    margin-top: 8px;
+    @include fontSizeSixteen;
+  }
+  .noImages {
+    @include fontSizeSixteen;
+    margin-top: 20px;
+  }
 }
