Fixed textarea font style

--- a/App/src/components/common/Forms/TextareaWithLabel/TextareaWithLabel.module.scss
+++ b/App/src/components/common/Forms/TextareaWithLabel/TextareaWithLabel.module.scss
@@ -18,6 +18,7 @@
     color: $black-text;
     resize: none;
     font-family: Roboto;
+    letter-spacing: 0.03em;
   }
   .textarea:focus-visible {
     outline: none;
