--- a/App/src/components/common/FileModal/FileModal.module.scss
+++ b/App/src/components/common/FileModal/FileModal.module.scss
@@ -1,4 +1,4 @@
-@import 'styles/Commons.scss';
+@import "styles/Commons.scss";
 .fileModal {
   position: absolute;
   outline: none;
@@ -70,6 +70,8 @@
   display: flex;
   flex-direction: column;
   max-width: 450px;
+  max-height: 300px;
+  overflow-y: auto;
   .uploadedFilesText {
     @include fontSizeSixteen;
     margin-bottom: 8px;
