--- a/App/src/components/common/FileModal/FileModalItem/FileModalItem.module.scss
+++ b/App/src/components/common/FileModal/FileModalItem/FileModalItem.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 40px;
+  min-height: 40px;
   border: 1px solid $gray-border;
   border-radius: 6px;
   margin-top: 8px;
