Implemented first simple filtration for the posts

--- a/App/src/components/MainPageComponents/Main/Articles/Articles.module.scss
+++ b/App/src/components/MainPageComponents/Main/Articles/Articles.module.scss
@@ -10,4 +10,11 @@
     @include fontSizeTwentyFive;
     margin-bottom: 24px;
   }
+  .noArticlesComponent {
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @include fontSizeEighteen
+  }
 }
