--- a/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
+++ b/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
@@ -26,8 +26,12 @@
       .imageContainer {
         max-width: 100%;
         margin-top: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: column;
         img {
-          width: -webkit-fill-available;
+          max-width: -webkit-fill-available;
           margin-top: 16px;
           border-radius: 16px;
         }
