Implemented footer and about us

--- a/App/src/components/MainPageComponents/Main/Articles/Articles.module.scss
+++ b/App/src/components/MainPageComponents/Main/Articles/Articles.module.scss
@@ -15,6 +15,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    @include fontSizeEighteen
+    @include fontSizeEighteen;
+  }
+  .showMoreArticles {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-right: 32px;
   }
 }
