--- a/App/src/pages/MainPage/MainPage.module.scss
+++ b/App/src/pages/MainPage/MainPage.module.scss
@@ -1,6 +1,7 @@
 .pageLayout {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
