Impemented role changes

--- a/App/src/styles/Commons.scss
+++ b/App/src/styles/Commons.scss
@@ -3,4 +3,5 @@
 @import "./CommonFonts.scss";
 @import "./CommonWrapLongText.scss";
 @import "./CommonShadows.scss";
-@import "./Articles/CommonArticlesIndents.scss"
+@import "./Articles/CommonArticlesIndents.scss";
+@import "./Users/CommonUsersIndents.scss";
