Implemented basic parsers and rich text in posts

--- a/App/src/components/ArticlesComponents/ArticlesFiles/AddFileComponent/AddFileComponent.module.scss
+++ b/App/src/components/ArticlesComponents/ArticlesFiles/AddFileComponent/AddFileComponent.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/Commons.scss';
 .filesWrapper {
   width: 50%;
-  margin-left: 16px;
+  margin-top: 32px;
   .filesHeader {
     display: flex;
     align-items: center;
