--- a/App/src/pages/AdministrationSubpages/ArticlesPage/Create/Post/CreatePostPage.module.scss
+++ b/App/src/pages/AdministrationSubpages/ArticlesPage/Create/Post/CreatePostPage.module.scss
@@ -1,10 +1,15 @@
-@import 'styles/Commons.scss';
+@import "styles/Commons.scss";
 .postsWrapper {
+  width: 100%;
   display: flex;
   .form {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    width: 50%;
     margin-right: 16px;
   }
+}
+.richText {
+  width: 100%;
+  height: 300px;
 }
