--- a/App/src/pages/AdministrationSubpages/ArticlesPage/Edit/JobOffers/EditJobOfferPage.module.scss
+++ b/App/src/pages/AdministrationSubpages/ArticlesPage/Edit/JobOffers/EditJobOfferPage.module.scss
@@ -1,7 +1,10 @@
-.formsContainer {
+.pageLayout {
   display: flex;
-  margin-top: 32px;
+  flex-direction: column;
   .formWrapper {
-    width: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 16px;
   }
 }
