--- a/App/src/pages/AdministrationSubpages/ArticlesPage/Create/Post/CreatePostPage.module.scss
+++ b/App/src/pages/AdministrationSubpages/ArticlesPage/Create/Post/CreatePostPage.module.scss
@@ -12,11 +12,20 @@
 .richText {
   width: 100%;
   height: 300px;
-  label {
+  .label {
     @include fontSizeSixteen;
     margin-bottom: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+  .richTextLabel {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .error {
+    @include fontSizeFourteen;
+    color: $intensive-red;
   }
 }
