--- a/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
+++ b/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
@@ -48,7 +48,7 @@
         .smallButton {
           display: flex;
           align-items: center;
-          justify-content: space-evenly;
+          justify-content: flex-end;
         }
       }
       .newComment {
