--- a/App/src/pages/AdministrationSubpages/ArticlesPage/Create/EduLinks/CreateEduLinkPage.module.scss
+++ b/App/src/pages/AdministrationSubpages/ArticlesPage/Create/EduLinks/CreateEduLinkPage.module.scss
@@ -8,6 +8,17 @@
     width: 100%;
     margin-right: 16px;
   }
+  .commentsAndFiles {
+    display: flex;
+    .comments {
+      margin-top: 32px;
+      margin-left: 16px;
+      .title {
+        margin-bottom: 32px;
+        @include fontSizeTwentyFive;
+      }
+    }
+  }
 }
 .richText {
   width: 100%;
