Created a request role interface

--- a/App/src/components/common/NoAccessComponent/NoAccessComponent.module.scss
+++ b/App/src/components/common/NoAccessComponent/NoAccessComponent.module.scss
@@ -17,7 +17,7 @@
             @include fontSizeSeventy;
         }
         .lastChild {
-            @include fontThirtyTwo;
+            @include fontSizeThirtyTwo;
         }
     }
 }
