--- a/App/src/styles/CommonFonts.scss
+++ b/App/src/styles/CommonFonts.scss
@@ -5,7 +5,7 @@
     font-weight: 800;
     font-size: 70px;
 }
-@mixin fontThirtyTwo {
+@mixin fontSizeThirtyTwo {
     font-weight: 800;
     font-size: 32px;
 }
