--- a/App/src/styles/CommonColors.scss
+++ b/App/src/styles/CommonColors.scss
@@ -11,3 +11,4 @@ $black-text: #141414;
 $gray-text: #909090;
 $gray-border: #c4c4c4;
 $gray-box-shadow: #f5f5f5;
+$black-box-shadow: rgba(0, 0, 0, 0.25);
