Implemented creating cooperation invitations post endpoint

--- a/App/src/pages/RequestRolePage/RequestRolePage.module.scss
+++ b/App/src/pages/RequestRolePage/RequestRolePage.module.scss
@@ -51,7 +51,7 @@
         margin: 32px;
         .leftSideTitle {
           @include fontSizeThirtyTwo;
-          color: $intensive-blue;
+          color: $intensive-green;
           margin-bottom: 16px;
         }
       }
