--- a/App/src/components/AdministrationLayoutComponents/NavigationItem/NavigationItem.module.scss
+++ b/App/src/components/AdministrationLayoutComponents/NavigationItem/NavigationItem.module.scss
@@ -1,12 +1,34 @@
 @import "styles/Commons.scss";
 .navigationItem {
-    height: 60px;
-    width: 60px;
+  height: 60px;
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  cursor: pointer;
+}
+.notificationAmount {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 20px;
+  margin-bottom: 15px;
+  min-width: 14px;
+  min-height: 10px;
+  background-color: transparent;
+  .innerNumber {
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    cursor: pointer;
+    justify-content: center;
+    background-color: $intensive-red;
+    border-radius: 99px;
+    @include fontSizeTwelve;
+    color: $clear-white;
+  }
 }
 .navigationItem:hover {
-    filter: drop-shadow(0px 0px 6px $intensive-orange);
+  filter: drop-shadow(0px 0px 6px $intensive-orange);
 }
