Building responsiveness for the main pages

--- a/App/src/styles/Commons.scss
+++ b/App/src/styles/Commons.scss
@@ -3,5 +3,6 @@
 @import "./CommonFonts.scss";
 @import "./CommonWrapLongText.scss";
 @import "./CommonShadows.scss";
+@import "./CommonMediaSizes.scss";
 @import "./Articles/CommonArticlesIndents.scss";
 @import "./Users/CommonUsersIndents.scss";
