--- a/App/src/components/MainPageComponents/Header/MainPageHeader.module.scss
+++ b/App/src/components/MainPageComponents/Header/MainPageHeader.module.scss
@@ -1,5 +1,52 @@
+@import "styles/Commons.scss";
 .mainPageBanner {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  img {
+    max-width: 90vw;
+  }
+}
+.mobileHeader {
+  height: 100px;
+  padding: 0 16px;
+  background-color: $less-intensive-green;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 32px;
+  .image {
+    position: relative;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .dropdown {
+    position: absolute;
+    top: 40px;
+    width: 280px;
+    border-radius: 8px;
+    background-color: $clear-white;
+    padding: 16px;
+    box-shadow: 1px 1px 40px $black-box-shadow;
+    .logged {
+      text-align: center;
+      margin-bottom: 4px;
+    }
+    .loggedAs {
+      @include fontSizeSixteen;
+      text-align: center;
+      margin-bottom: 12px;
+    }
+    .buttons {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .requestRole {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
 }
