--- a/App/src/components/MainPageComponents/Main/Articles/Articles.module.scss
+++ b/App/src/components/MainPageComponents/Main/Articles/Articles.module.scss
@@ -1,10 +1,15 @@
 @import "styles/Commons.scss";
 .articlesSite {
   width: 75%;
+  @media (max-width: $tabletMaxWidth) {
+    width: 100%;
+  }
   display: flex;
   flex-direction: column;
   .mainWrapper {
-    margin-right: 32px;
+    @media (min-width: $smallLaptopWidth) {
+      margin-right: 32px;
+    }
   }
   .headerTitle {
     @include fontSizeTwentyFive;
