--- a/App/src/components/MainPageComponents/Main/Articles/ArticleItem/ArticleItem.module.scss
+++ b/App/src/components/MainPageComponents/Main/Articles/ArticleItem/ArticleItem.module.scss
@@ -13,6 +13,7 @@
     @include fontSizeSixteen;
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: space-evenly;
     margin-top: 8px;
     margin-bottom: 8px;
