--- a/App/src/components/MainPageComponents/Main/MainPageMain.module.scss
+++ b/App/src/components/MainPageComponents/Main/MainPageMain.module.scss
@@ -4,8 +4,14 @@
   flex-direction: column;
   align-items: center;
   flex: 1;
+
   .content {
     width: 80%;
     display: flex;
+    @media (max-width: $tabletMaxWidth) {
+      width: 100%;
+      padding: 16px;
+      display: flex;
+    }
   }
 }
