Introduced reset button in text filter

--- a/App/src/components/MainPageComponents/Main/Menu/AdvancedFilters/AdvancedFilters.module.scss
+++ b/App/src/components/MainPageComponents/Main/Menu/AdvancedFilters/AdvancedFilters.module.scss
@@ -13,6 +13,6 @@
   .buttonWrapper {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
   }
 }
