--- a/App/src/pages/MainPage/PrivacyPage/PrivacyPage.module.scss
+++ b/App/src/pages/MainPage/PrivacyPage/PrivacyPage.module.scss
@@ -36,6 +36,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        max-width: 70vw;
         width: 500px;
         border: 2px solid $intensive-green;
         padding: 16px;
