--- a/App/src/pages/MainPage/ArticlePage/ArticleComment/ArticleComment.module.scss
+++ b/App/src/pages/MainPage/ArticlePage/ArticleComment/ArticleComment.module.scss
@@ -11,15 +11,42 @@
     @include fontSizeSixteen;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: $tabletMaxWidth) {
+      align-items: flex-start;
+    }
+    @media (max-width: $mobileMaxSize) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
-  .buttons {
+  .rightSide {
     display: flex;
     align-items: center;
+    @media (max-width: $tabletMaxWidth) {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
+    .buttons {
+      display: flex;
+      align-items: center;
+      @media (max-width: $tabletMaxWidth) {
+        margin-top: 8px;
+      }
+      @media (max-width: $mobileMaxSize) {
+        margin-right: 16px;
+      }
+    }
     .date {
       min-width: 180px;
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      @media (max-width: $mobileMaxSize) {
+        margin-top: 8px;
+        justify-content: center;
+      }
     }
   }
   .editContent {
