--- a/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
+++ b/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
@@ -2,9 +2,13 @@
 .articlePage {
   display: flex;
   justify-content: space-evenly;
+  flex: 1;
   .mainContainer {
     width: 80%;
     margin-top: 55px;
+    @media (max-width: $mobileMaxSize) {
+      margin-top: 16px;
+    }
     .article {
       border-radius: 8px;
       margin-bottom: 24px;
