Removed margin from mobile app

--- a/App/src/components/MainPageComponents/Main/Menu/MobileFiltrationsTopBar/MobileFiltrationsTopBar.module.scss
+++ b/App/src/components/MainPageComponents/Main/Menu/MobileFiltrationsTopBar/MobileFiltrationsTopBar.module.scss
@@ -8,6 +8,9 @@
       background: $less-intensive-green;
       border-radius: 6px;
       padding: 16px;
+      @media (max-width: $mobileMaxSize) {
+        margin-top: 0px;
+      }
       .topBarWrapper {
         display: flex;
         justify-content: space-evenly;
