Implemented basic overview of items in administration

--- a/App/src/components/ArticlesComponents/Edit/EditPost/EditPost.module.scss
+++ b/App/src/components/ArticlesComponents/Edit/EditPost/EditPost.module.scss
@@ -30,8 +30,11 @@
     overflow-x: auto;
   }
   .comments {
-    margin-left: 32px;
     max-height: 260px;
     overflow-x: auto;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
   }
 }
