--- a/App/src/pages/AdministrationSubpages/ArticlesPage/Create/EduLinks/CreateEduLinkPage.module.scss
+++ b/App/src/pages/AdministrationSubpages/ArticlesPage/Create/EduLinks/CreateEduLinkPage.module.scss
@@ -1,4 +1,4 @@
-@import 'styles/Commons.scss';
+@import "styles/Commons.scss";
 .eduLinksWrapper {
   display: flex;
   width: 100%;
@@ -12,7 +12,7 @@
     display: flex;
     .comments {
       margin-top: 32px;
-      margin-left: 16px;
+      width: 50%;
       .title {
         margin-bottom: 32px;
         @include fontSizeTwentyFive;
