--- a/App/src/pages/AdministrationSubpages/ArticlesPage/Create/Post/CreatePostPage.module.scss
+++ b/App/src/pages/AdministrationSubpages/ArticlesPage/Create/Post/CreatePostPage.module.scss
@@ -12,7 +12,7 @@
     display: flex;
     .comments {
       margin-top: 32px;
-      margin-left: 16px;
+      width: 50%;
       .title {
       margin-bottom: 32px;
         @include fontSizeTwentyFive;
