--- a/App/src/styles/Articles/CommonArticlesIndents.scss
+++ b/App/src/styles/Articles/CommonArticlesIndents.scss
@@ -1,9 +1,15 @@
 @mixin postedColumnWidth {
-    width: 17%;
+  width: 17%;
+  @media (max-width: $tabletMaxWidth) {
+    width: 40%;
+  }
 }
 @mixin titleColumnWidth {
-    width: 37%;
+  width: 37%;
+  @media (max-width: $tabletMaxWidth) {
+    width: 50%;
+  }
 }
 @mixin creatorColumnWidth {
-    width: 35%;
-}   
+  width: 35%;
+}
