--- a/App/src/components/ArticlesComponents/Edit/EditJobOffer/EditJobOffer.module.scss
+++ b/App/src/components/ArticlesComponents/Edit/EditJobOffer/EditJobOffer.module.scss
@@ -23,15 +23,31 @@
   margin-top: 32px;
   flex: 1;
   display: flex;
+  @media (max-width: 500px) {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+  }
   .files {
     width: 47%;
     padding-right: 16px;
     max-height: 260px;
     overflow-x: auto;
+    @media (max-width: 500px) {
+      margin-top: 32px;
+      width: 100%;
+    }
   }
   .comments {
-    margin-left: 32px;
     max-height: 260px;
     overflow-x: auto;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    @media (max-width: 500px) {
+      margin-top: 32px;
+      width: 100%;
+    }
   }
 }
