--- a/App/src/components/MainPageComponents/Header/MainPageHeader.module.scss
+++ b/App/src/components/MainPageComponents/Header/MainPageHeader.module.scss
@@ -9,7 +9,7 @@
 }
 .mobileHeader {
   height: 100px;
-  padding: 0 16px;
+  padding: 0 32px;
   background-color: $less-intensive-green;
   display: flex;
   align-items: center;
@@ -30,6 +30,9 @@
     background-color: $clear-white;
     padding: 16px;
     box-shadow: 1px 1px 40px $black-box-shadow;
+    @media (max-width: $mobileMaxSize) {
+      max-width: 200px;
+    }
     .logged {
       text-align: center;
       margin-bottom: 4px;
