--- a/App/src/components/MainPageComponents/Main/Articles/Articles.module.scss
+++ b/App/src/components/MainPageComponents/Main/Articles/Articles.module.scss
@@ -3,7 +3,7 @@
   width: 75%;
   @media (max-width: $tabletMaxWidth) {
     display: flex;
-    padding: 16px;
+    padding: 0 32px;
     width: 100%;
   }
   display: flex;
