--- a/App/src/pages/AdministrationSubpages/ArticlesPage/Create/EduLinks/CreateEduLinkPage.module.scss
+++ b/App/src/pages/AdministrationSubpages/ArticlesPage/Create/EduLinks/CreateEduLinkPage.module.scss
@@ -10,9 +10,18 @@
   }
   .commentsAndFiles {
     display: flex;
+    @media (max-width: 500px) {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 40px;
+    }
     .comments {
       margin-top: 32px;
       width: 50%;
+      @media (max-width: 500px) {
+        margin-top: 32px;
+        width: 100%;
+      }
       .title {
         margin-bottom: 32px;
         @include fontSizeTwentyFive;
