Implemented documents expansion

--- a/App/src/components/ArticlesComponents/ArticlesFiles/AddFileComponent/AddFileComponent.module.scss
+++ b/App/src/components/ArticlesComponents/ArticlesFiles/AddFileComponent/AddFileComponent.module.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 12px;
     .files {
       @include fontSizeSixteen;
     }
