--- a/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
+++ b/App/src/pages/MainPage/ArticlePage/ArticlePage.module.scss
@@ -65,6 +65,22 @@
       align-items: center;
       justify-content: space-evenly;
     }
+    .documentsContainer {
+      @include fontSizeEighteen;
+      .documents {
+        max-width: 300px;
+        height: 40px;
+        @include fontSizeSixteen;
+        margin-top: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border: 1px solid red;
+        border-radius: 6px;
+        padding: 12px;
+        cursor: pointer;
+      }
+    }
   }
   .error {
     @include fontSizeFourteen;
